# github-copilot-for-programmers

./: .gitignore  LICENSE  Makefile  README.adoc  README.md  asciidoctor.css
.github/workflows/: publish-asciidoc-site.yaml
courseware/: README.md  index.adoc  theme.css
courseware-adoc/: 04_java-spring-boot-intellij.adoc  dark-theme.css  docinfo.html  index.adoc  theme.css
courseware-adoc/01_opening-demos/: 00_module-content.adoc  02_java-console-vscode.adoc  03_java-spring-boot-intellij.adoc  03_python-console-vscode.adoc  04_java-spring-boot-intellij.adoc  05_csharp-aspnetmvc-webapi.adoc  06_react-typescript-vscode.adoc
courseware-adoc/02_copilot-suggestions/: 00_module-content.adoc  01_cpp-suggestions.adoc  02_java-suggestions.adoc
courseware-adoc/03_copilot-scopes/: 00_module-content.adoc  01_copilot-vscode-scope.adoc  02_copilot-terminal-scope.adoc  03_copilot-terminal-scope-containerization.adoc
courseware-adoc/04_x-shot-prompts/: 00_module-content.adoc  01_cpp-shot-prompting.adoc  02_java-shot-prompting.adoc  03_python-shot-prompting.adoc
courseware-adoc/05_workspace/: 00_module-content.adoc
courseware-adoc/06_discuss-code/: 00_module-content.adoc
courseware-adoc/07_fix-code/: 00_module-content.adoc
courseware-adoc/08_workshops/: 00_module-content.adoc  02_java-new-app.adoc  03_python-new-app.adoc  04_csharp-new-app.adoc
courseware-old/02_copilot-suggestions/: 01_cpp-suggestions.md
courseware-old/06_improve-code/: README.md
courseware/07_workshops/01_cpp/02_unit-tests/end-code/: CMakeLists.txt  main.cpp  test_utils.cpp  utils.cpp
(+74 files in other folders)
